Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55540

Wrong background of the tray icon after unlocking screen in LXDE

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Alpha
    • 5.6.0, 5.7.0, 5.8.0
    • QPA: X11/XCB
    • None
    • LXDE
    • 5cf6f51b4c73cb1309279aa42d828097b24aa119

    Description

      1) lock the screen
      2) switch to console and run the systray example:
      systray -display :0
      3) unlock the screen
      the tray icon will have a background taken from the screen locker

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            avolkov Alexander Volkov
            avolkov Alexander Volkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes